[package]
authors = ["Alex Huszagh <ahuszagh@ahuszagh.localdomain>"]
categories = ["data-structures"]
description = "StackVec: vector-like facade for stack-allocated arrays."
documentation = "https://docs.rs/stackvector"
edition = "2021"
rust-version = "1.56.0"
keywords = ["vec", "vector", "stack", "no_std"]
license = "MIT/Apache-2.0"
name = "stackvector"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-stackvector"
version = "1.1.1"

[badges]
travis-ci = { repository = "Alexhuszagh/rust-stackvector" }

[features]
default = []
# Use the `std` library. Deprecated, only for backwards compatibility.
std = []

[dependencies]
unreachable = "1.0.0"
